--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,9 @@ spring.http.multipart.max-request-size=10MB
 spring.folder_upload_files=./uploaded
 
 #spring-hibernate
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/product?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/mysql-java?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=Nh4t12101997
+spring.datasource.password=1234
 
 #thymeleaf
 spring.thymeleaf.mode=LEGACYHTML5
@@ -16,3 +15,24 @@ spring.thymeleaf.templates_root=src/main/resources/templates/
 
 spring.resources.static-locations=file:src/main/resources/static/
 spring.resources.cache-period=0
+
+# ===============================
+# = DATA SOURCE
+# ===============================
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder
+# ==============================================================
+spring.queries.users-query=select email, password, active from user where email=?
+spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
